[tool.poetry]
name = "OneLauncher"
version = "2.0.rc1"
description = "The OneLauncher to rule them all"
readme = "README.md"
authors = ["June Stepp <contact@junestepp.me>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/JuneStepp/OneLauncher"
packages = [{ include = "onelauncher", from = "src" }]
keywords = ["LOTRO", "DDO", "launcher", "addon-manager", "custom-launcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PySide6-Essentials = "^6.6.1"

# Keyring packages
keyring = "^25.1.0"
cryptography = "^42.0.5"
SecretStorage = { version = "^3.3.3", markers = "sys_platform == 'linux'" }
# Should only use with KWallet versions < 5.97. See https://bugs.kde.org/show_bug.cgi?id=458318.
dbus-python = { version = "^1.3.2", markers = "sys_platform == 'linux'", optional = true }

defusedxml = "^0.7.1"
platformdirs = "^4.2.0"
xmlschema = "^3.2.0"
feedparser = "^6.0.10"
Babel = "^2.12.1"
# Be careful updating this. Some hacky code is currently being used to make it fully
# async.
zeep = "4.2.1"
cachetools = "^5.3.3"
trio = "^0.26.0"
httpx = "^0.27.0"
asyncache = { git = "https://github.com/JuneStepp/asyncache.git" }
attrs = "^23.2.0"
cattrs = { version = "^23.2.3", extras = ["tomlkit"] }
typer = "^0.12.3"
qtawesome = "^1.3.1"
pysidesix-frameless-window = "^0.3.12"
packaging = "^24.1"

[tool.poetry.group.dev.dependencies]
Nuitka = "^2.3.11"
pytest = "^8.2.2"
mypy = "^1.10.1"
types-cachetools = "^5.3.0.7"
trio-typing = { extras = ["mypy"], version = "^0.10.0" }
ruff = "^0.4.10"
pytest-randomly = "^3.15.0"

[tool.poetry.extras]
# Should only use with KWallet versions < 5.97. See https://bugs.kde.org/show_bug.cgi?id=458318.
old-kwallet = ["dbus-python"]

[tool.poetry.scripts]
onelauncher = "onelauncher.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"      # TODO: Remove once Poetry supports [project] section
extend-exclude = ["*_uic.py"] # Ignore autogenerated UI files

[tool.ruff.lint]
select = [
    "E4",    # pycodestyle
    "E7",
    "E9",
    "F",     # Pyflakes
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "I",     # isort,
    "RUF",   # Ruff
    "S",     # flake8-bandit
    "ASYNC", # flake8-async
    "TRIO",  # flake8-trio,
    "ANN",   # flake8-annotations
    "A",     # flake8-builtins
    "CPY",   # flake8-copyright
    "FA",    # flake8-future-annotations
    "T20",   # flake8-print
    "FIX",   # flake8-fixme
    "ERA",   # eradicate
    "PL",    # Pylint
    "PT",    # flake8-pytest-style
]
ignore = [
    "ANN101",  # missing-type-self
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR0912", # too-many-branches
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"] # assert

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.mypy]
plugins = ["trio_typing.plugin", "onelauncher.mypy_plugin"]
mypy_path = "stubs"

strict = true

# Disallow most dynamic typing
warn_return_any = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true

warn_unreachable = true
implicit_reexport = false

enable_error_code = "redundant-expr,possibly-undefined,truthy-bool,truthy-iterable,ignore-without-code,unused-awaitable,explicit-override,mutable-override,unimported-reveal"
exclude = ["\\.mypy_test_data\\.py"]


[[tool.mypy.overrides]]
# TODO: Future version will have typing, 
# once https://github.com/kurtmckee/feedparser/blob/develop/changelog.d/20210801_133300_palfrey_typing.rst
# makes it to a release
module = ["feedparser"]
ignore_missing_imports = true
