[project]
name = "OneLauncher"
version = "2.0.2"
description = "The OneLauncher to rule them all"
authors = [{ name = "June Stepp", email = "contact@junestepp.me" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["LOTRO", "DDO", "launcher", "addon-manager", "custom-launcher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6-Essentials>=6.7.2",
    "qtawesome>=1.3.1",
    "pysidesix-frameless-window>=0.3.12",

    # Keyring packages
    "keyring>=25.3.0",
    "cryptography>=43.0.0",
    "SecretStorage>=3.3.3 ; sys_platform == 'linux'",

    "platformdirs>=4.2.2",
    "defusedxml>=0.7.1",
    "xmlschema>=3.3.2",
    "feedparser>=6.0.11",
    "Babel>=2.16.0",
    "trio>=0.26.2",
    "httpx>=0.27.0",
    "zeep",
    "cachetools>=5.4.0",
    "asyncache",
    "attrs>=24.2.0",
    "cattrs[tomlkit]>=23.2.3",
    "packaging>=24.1",
    "cyclopts>=4.3.0",
]

[project.urls]
Repository = "https://github.com/JuneStepp/OneLauncher"
Issues = "https://github.com/JuneStepp/OneLauncher/issues"
ChangeLog = "https://github.com/JuneStepp/OneLauncher/blob/main/CHANGES.md"

[project.scripts]
onelauncher = "onelauncher.__main__:main"

[dependency-groups]
lint = [
    "mypy>=1.18.2",
    "types-cachetools>=5.3.0.7",
    "ruff>=0.14.1",
    # Newer versions have more accurate types.
    "PySide6-Essentials>=6.10.0",
]
test = [
    "pytest>=8.3.2",
    "pytest-randomly>=3.15.0",
    # Used to test mypy plugin
    "mypy",
    "pytest-mock>=3.15.1",
    "pytest-trio>=0.8.0",
]
build = ["Nuitka>=2.4.8", "marko>=2.1.2"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "build" },
]

[tool.uv.sources]
zeep = { git = "https://github.com/JuneStepp/python-zeep.git" }
asyncache = { git = "https://github.com/JuneStepp/asyncache.git" }

[tool.hatch.build.targets.sdist]
packages = ["src/onelauncher"]

[tool.hatch.build.targets.wheel]
packages = ["src/onelauncher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-exclude = ["*_uic.py"] # Ignore autogenerated UI files

[tool.ruff.lint]
select = [
    "E4",    # pycodestyle
    "E7",
    "E9",
    "F",     # Pyflakes
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "I",     # isort,
    "RUF",   # Ruff
    "S",     # flake8-bandit
    "ASYNC", # flake8-async
    "ANN",   # flake8-annotations
    "A",     # flake8-builtins
    "FA",    # flake8-future-annotations
    "T20",   # flake8-print
    "FIX",   # flake8-fixme
    "ERA",   # eradicate
    "PL",    # Pylint
    "PT",    # flake8-pytest-style
]
ignore = [
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR0912", # too-many-branches
    "S113",    # request-without-timeout. httpx has default timeouts
]
per-file-ignores."tests/**.py" = ["S101"] # assert
flake8-annotations.mypy-init-return = true
flake8-bugbear.extend-immutable-calls = ["onelauncher.config.config_field"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
filterwarnings = ["error"]
xfail_strict = true
trio_mode = true

[tool.mypy]
plugins = ["onelauncher.mypy_plugin"]
mypy_path = "stubs"

strict = true
warn_redundant_casts = true

# Disallow most dynamic typing
warn_return_any = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true

warn_unreachable = true
implicit_reexport = false

enable_error_code = "redundant-expr,possibly-undefined,truthy-bool,truthy-iterable,ignore-without-code,unused-awaitable,explicit-override,mutable-override,unimported-reveal"
exclude_gitignore = true
exclude = ["\\.mypy_test_data\\.py"]

[[tool.mypy.overrides]]
# TODO: Future version will have typing, 
# once https://github.com/kurtmckee/feedparser/blob/develop/changelog.d/20210801_133300_palfrey_typing.rst
# makes it to a release
module = ["feedparser"]
ignore_missing_imports = true
